# ros_ssl_robot

./: .gitignore  README.md  commands.txt  gazebo_place.sh
ssl_robot_2dnav/: CMakeLists.txt  package.xml
ssl_robot_2dnav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml
ssl_robot_2dnav/launch/: move_base.launch
ssl_robot_2dnav/map/: ssl_field.yaml  ssl_field_map.xcf
ssl_robot_2dnav/src/: ssl_robot_move_to.cpp
ssl_robot_affw/: CMakeLists.txt  package.xml
ssl_robot_affw/config/: affw.cfg  affw3.cfg  affw_v2.cfg
ssl_robot_affw/launch/: affw_ssl.launch  execute_traj_gaz.launch  execute_traj_sr.launch  export.launch  gazebo.launch  ssl_robot_affw_ctrl.launch  ssl_robot_affw_traj.launch  ssl_robot_joy.launch  ssl_robot_traj.launch  start_ssl_robot_gaz.launch  trajectory.launch  trajectory_base.launch  trajectory_gazebo.launch  trajectory_real.launch
ssl_robot_affw/src/: export_data.cpp  ssl_robot_affw.cpp  ssl_robot_export.cpp  ssl_robot_traj_gen.cpp
ssl_robot_comm/: CMakeLists.txt  package.xml
ssl_robot_comm/launch/: joy.launch  joy_gazebo.launch  joy_real.launch
ssl_robot_comm/src/: joy2vel_xyw.cpp  joy2vel_xyw_smooth.cpp  sharedRadio2vel_xyw.cpp  vel_xyw2SharedRadio.cpp
ssl_robot_control/: CMakeLists.txt  package.xml
ssl_robot_control/config/: ssl_robot_control.yaml
ssl_robot_control/launch/: ssl_robot.perspective  ssl_robot_control.launch  ssl_robot_rqt.launch  ssl_robot_rqt.perspective
ssl_robot_control/src/: vel_xyw2motorCtrl.cpp
ssl_robot_description/: CMakeLists.txt  package.xml
ssl_robot_description/launch/: ssl_robot_rviz.launch
ssl_robot_description/urdf/: materials.xacro  robot.sdf  robot.urdf  ssl_robot.gazebo  ssl_robot.xacro  ssl_robot2.xacro  sub_wheel.xacro  wheel.xacro  wheel2.xacro  wheel3.xacro
ssl_robot_feedback_gaz/: CMakeLists.txt  package.xml
ssl_robot_feedback_gaz/launch/: ekf.launch  fdbk_gaz.perspective  feedback-raw.launch  feedback-ukf.launch  feedback.launch  ukf.launch
ssl_robot_feedback_gaz/src/: ssl_robot_feedback_gaz.cpp  ssl_robot_feedback_gaz_p3d.cpp
ssl_robot_filter/: CMakeLists.txt  package.xml
ssl_robot_filter/launch/: ekf.launch  feedback-ekf.launch  feedback-p3d.launch  filter-ukf.launch  rqt.launch  ukf_tracked.launch
ssl_robot_filter/src/: AngleMath.cpp  AngleMath.h  pose_add_cov.cpp  ssl_robot_feedback_gaz.cpp  ssl_robot_feedback_gaz_p3d.cpp  state_filter.cpp
ssl_robot_gazebo/: CMakeLists.txt  package.xml
ssl_robot_gazebo/launch/: ssl_robot.launch  ssl_robot_spawn.launch
ssl_robot_msg/: CMakeLists.txt  package.xml
ssl_robot_msg/msg/: state.msg
ssl_robot_msgs/: CMakeLists.txt  package.xml
ssl_robot_msgs/msg/: State.msg  Target.msg
ssl_robot_real/: CMakeLists.txt  package.xml
ssl_robot_real/launch/: ssl_robot_real.launch
ssl_robot_shared_radio/: CMakeLists.txt  package.xml
ssl_robot_shared_radio/src/: vel_xyw2SharedRadio.cpp
ssl_robot_transform/: CMakeLists.txt  package.xml
ssl_robot_transform/src/: ssl_robot_transform.cpp
ssl_robot_vision/: CMakeLists.txt  package.xml
ssl_robot_vision/launch/: ssl_robot_vision.launch  vision_receiver.launch
ssl_robot_vision/src/: ssl_robot_vision.cpp  sumatra_wf_receiver.cpp
ssl_robot_vision_sumatra/: CMakeLists.txt  package.xml
ssl_robot_vision_sumatra/launch/: vision_receiver.launch
ssl_robot_vision_sumatra/src/: ssl_robot_vision_sumatra.cpp  test_delay.cpp
