<?xml version="1.0"?>
<package>
  <name>ssl_robot_control</name>
  <version>1.0.0</version>
  <description>The ssl_robot_control package</description>

  <maintainer email="nicolai.ommer@gmail.com">Nicolai Ommer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <run_depend>controller_manager</run_depend>

  <export>
  </export>

</package>
