<?xml version="1.0"?>
<package>
  <name>ssl_robot_description</name>
  <version>1.0.0</version>
  <description>SSL robot description</description>
  
  <maintainer email="nicolai.ommer@gmail.com">Nicolai Ommer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
