<?xml version="1.0"?>
<package>
  <name>ssl_robot_real</name>
  <version>1.0.0</version>
  <description>Start up scripts for real robot</description>

  <maintainer email="nicolai.ommer@gmail.com">Nicolai Ommer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
