<?xml version="1.0"?>
<package>
  <name>ssl_robot_shared_radio</name>
  <version>1.0.0</version>
  <description>Shared radio communication for ssl bots</description>

  <maintainer email="nicolai.ommer@gmail.com">Nicolai Ommer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>